[package]
name = "cast"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.6.4", features = ["full"] }
tokio = { version = "1.41.1", features = ["full"] }
eyre = { version = "0.6.12", features = ["auto-install"] }
clap = { version = "4.5.21", features = ["derive"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
serde_json = "1.0.133"
